<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prefs+ Demo</string>
    <string name="settings">Settings</string>
    <string name="settingsX">SettingsX</string>
    <string name="title">Preference Values</string>
    <string name="integer_key">int_key</string>
    <string name="integer_title">Integer</string>
    <string name="integer_dialog_title">Enter an integer value</string>
    <string name="float_key">float_key</string>
    <string name="float_title">Float</string>
    <string name="float_dialog_title">Enter a float value</string>
    <string name="integer_list_key">int_list_key</string>
    <string name="integer_list_title">Integer List</string>
    <string name="integer_list_dialog_title">Select from the following list</string>
    <string name="text_key">text_key</string>
    <string name="text_title">Text</string>
    <string name="text_dialog_title">Enter a string</string>
    <string name="hint">Update current values via Settings</string>

    <string name="color_key">color_key</string>

</resources>
